# bitcoin_crawler

./: .gitignore  .pylintrc  README.md  app.py  cdk.context.json  cdk.json  pyproject.toml
.github/workflows/: pylint.yml
bitcoin_crawler/: bitcoin_crawler_stack.py
bitcoin_crawler/resources/: resources.py
bitcoin_crawler/resources/classes/: cluster.py  task_definition.py
src/: Dockerfile  crawler_price_bitcoin.py  main.py
